# translatetool

./: .gitignore  Cargo.toml  README.md  en.flt  en.old.flt  fr.flt  previous-input-en.flt  sample-input.en.flt  sample-output.fr.flt
src/: cli.rs  errors.rs  google_service_credentials.rs  main.rs  translate.rs
