[package]
name = "tt"
version = "1.4.2"
authors = ["Kenton Hamaluik <kenton@rehabtronics.com>"]
edition = "2018"

[dependencies]
fluent = "0.6"
fluent-bundle = "0.6"
fluent-syntax = "0.9"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
indicatif = "0.11"
mung = "0.1"
base64 = "0.10"
rustls = "0.14"
