[package]
name = "tt"
version = "2.0.0"
authors = ["Kenton Hamaluik <kenton@rehabtronics.com>"]
edition = "2018"

[dependencies]
fluent = "0.11"
fluent-bundle = "0.11"
fluent-syntax = "0.9"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
indicatif = "0.14"
mung = "0.1"
base64 = "0.12"
rustls = "0.17"
simplelog = "0.7"
log = "0.4"
